--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-svgmin": "^1.2.4",
     "gulp-svgstore": "^6.1.1",
     "gulp-uglify": "^3.0.0",
+    "normalize.less": "^1.0.0",
     "pump": "^3.0.0",
     "run-sequence": "^2.2.1"
   }
